fix background gradient on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  min-height: 100%;
   background-image: linear-gradient(to bottom right, rgb(181, 181, 181), rgb(56, 56, 56));
 }
 
